Fixed profession list pushed off screen. Add skill interactions

--- a/app/assets/stylesheets/configbar/configbar.css
+++ b/app/assets/stylesheets/configbar/configbar.css
@@ -14,6 +14,7 @@
 
 .config-indent {
   padding-left: 8px;
+  max-width: 320px;
 }
 
 .select.select-block .btn {
